# scpi-bind

./: LICENSE  README.md  pyproject.toml
src/scpibind/: base.py  instrument.py  rto6.py
src/scpibind/instruments/: rto6.py
